# nautobot-app-floor-plan

./: .cookiecutter.json  .gitignore  README.md  cookie.json  invoke.example.yml  invoke.mysql.yml  issue.md  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: 10.added  100.added  104.housekeeping  11.added  111.housekeeping  114.housekeeping  116.fixed  117.added  12.added  121.fixed  122.fixed  124.added  125.housekeeping  130.housekeeping  131.fixed  132.fixed  133.housekeeping  134.housekeeping  135.fixed  136.fixed  137.housekeeping  141.added  144.fixed  145.added  146.added  149.housekeeping  15.added  153.added  155.added  157.housekeeping  158.fixed  159.housekeeping  161.housekeeping  163.housekeeping  167.added  170.fixed  171.housekeeping  173.fixed  180.fixed  186.housekeeping  (+15 more)
development/: Dockerfile  development.env  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py  towncrier_template.j2
docs/: requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md  version_2.0.md  version_2.1.md  version_2.2.md  version_2.3.md  version_2.4.md  version_2.5.md  version_2.6.md  version_2.7.md  version_2.8.md  version_2.9.md  version_3.0.md
docs/dev/: contributing.md  dev_environment.md  extending.md  multi-select-api.md  release_checklist.md  tooltips.md
docs/dev/code_reference/: api.md  models.md  package.md  svg.md
docs/models/: floorplan.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  faq.md
nautobot_floor_plan/: __init__.py  app-config-schema.json  choices.py  compose.yaml  custom_panels.py  custom_validators.py  filter_extensions.py  filters.py  forms.py  homepage.py  label_converters.py  label_generator.py  middleware.py  models.py  navigation.py  signals.py  svg.py  svgmaker.py  tables.py  template_content.py  urls.py  utils.py  views.py
nautobot_floor_plan/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
nautobot_floor_plan/migrations/: 0001_initial.py  0002_auto_20221207_0511.py  0002_auto_20230901_0845.py  0002_fixup_null.py  0003_auto_20230908_1339.py  0004_auto_20240321_1438.py  0005_add_rackgroup.py  0006_add_axis_origin_seed.py  0006_add_axis_origin_start.py  0006_alter_floorplantile_status.py  0007_add_axis_origin_seed.py  0008_add_axis_step.py  0009_add_custom_label_support.py  0010_add_floorplantile_objects.py
nautobot_floor_plan/templates/nautobot_floor_plan/: floorplan.html  floorplan_create.html  floorplan_retrieve.html  floorplantile_create.html  floorplantile_retrieve.html  location_child_floor_plan.html  location_floor_plan.html  site_template_content.html
nautobot_floor_plan/templatetags/: seed_helpers.py
nautobot_floor_plan/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_converters.py  test_custom_validators.py  test_filter_floorplan.py  test_filters.py  test_form_floorplan.py  test_forms.py  test_general.py  test_integration.py  test_label_generator.py  test_middleware.py  test_model_floorplan.py  test_models.py  test_multiselect.py  test_range_validations.py  test_svg.py  test_tables.py  test_template_content.py  test_template_tags.py  test_utils.py  test_views.py  utils.py
nautobot_floor_plan/utils/: custom_validators.py  general.py  label_converters.py  label_generator.py  middleware.py  utils.py
nautobot_floor_plan/views/: __init__.py  floorplan.py
(+15 files in other folders)
